sumo/tests/sumo/output/e2/errors/file_missing/errors.sumo
Error: Missing output definition for detector '4/1to3/1'.
Quitting (on error).
